correct style for footer  on small screens

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -445,6 +445,16 @@ footer p {
   #circle-cover-bg {
     background-size: cover;
   }
+
+  .footer-contact i {
+    font-size: 110%;
+    padding: 0 2%;
+  }
+  
+  .footer-nav a {
+    font-size: 85%;
+  }
+  
 }
 
 /* For screen sizes from 705px wide and down */
@@ -539,12 +549,22 @@ footer p {
     display: block;
   }
 
+  .footer-contact i {
+    font-size: 70%;
+    padding: 0 6px;
+  }
+  
+  .footer-nav a {
+    font-size: 70%;
+  }
+
+  footer p {
+    font-size: 60%;
 }
 
 /* For screen sizes from 375px wide and down */
 
 @media screen and (max-width: 375px) {
-
   #menu {
     font-size: 88%;
     margin-top: 4px;
@@ -555,6 +575,18 @@ footer p {
   #menu li {
     margin-right: 5px;
   }
+
+  .footer-contact i {
+    font-size: 50%;
+    padding: 0 6px;
+  }
+  
+  .footer-nav a {
+    font-size: 60%;
+  }
+
+  footer p {
+    font-size: 50%;
 }
 
 /* For screen sizes from 320px wide and down */
@@ -568,5 +600,10 @@ footer p {
 
   #menu li {
     margin-right: 2px;
+  }
+
+  .footer-contact i {
+    font-size: 45%;
+    padding: 0 3px;
   }
 }
